@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-01T08:21:54Z",
-  "count_outdated" : 622,
-  "uniques_outdated" : 357,
-  "count" : 662,
+  "timestamp" : "2022-11-01T16:24:53Z",
+  "count_outdated" : 625,
+  "uniques_outdated" : 359,
+  "count" : 663,
   "uniques" : 376,
   "clones" : [
-    {
-      "timestamp": "2022-10-18T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-10-19T00:00:00Z",
       "count": 3,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-11-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
