@@ -1,12 +1,7 @@
 {
-  "count": 40,
-  "uniques": 5,
+  "count": 38,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-10-18T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-10-19T00:00:00Z",
       "count": 3,
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-11-01T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
