@@ -1,3 +1,11 @@
+2022-11-01T16:24:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3371050733 # 989
+* notice: last 14d: unq all: 4 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 357 622 / 376 662
+* notice: next accum: outdated-unq outdated-all / unq all: 359 625 / 376 663
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-10-18] / [2022-11-01]
+
 2022-11-01T08:21:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3367914193 # 988
 * notice: last 14d: unq all: 5 40
